--- a/conf/application.conf
+++ b/conf/application.conf
@@ -79,7 +79,7 @@ play.modules {
 # to map through to internal messages, or allow the language to be stored in a cookie.
 play.i18n {
   # The application languages
-  langs = [ "en" ]
+  langs = ["en"]
 
   # Whether the language cookie should be secure or not
   #langCookieSecure = true
@@ -100,6 +100,9 @@ play.filters {
   # Enabled filters are run automatically against Play.
   # CSRFFilter, AllowedHostFilters, and SecurityHeadersFilters are enabled by default.
   enabled += filters.ExampleFilter
+
+  # Disable CSRFFilter for testing
+  disabled += play.filters.csrf.CSRFFilter
 
   # Disabled filters remove elements from the enabled list.
   #disabled += filters.ExampleFilter
