Setup socket client

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -376,3 +376,6 @@ db {
   # https://www.playframework.com/documentation/latest/Highlights25#Logging-SQL-statements
   #default.logSql=true
 }
+
+# API prefix to be used for all API routes
+apiPrefix = "api"
