--- a/conf/application.conf
+++ b/conf/application.conf
@@ -99,7 +99,7 @@ play.filters {
 
   # Enabled filters are run automatically against Play.
   # CSRFFilter, AllowedHostFilters, and SecurityHeadersFilters are enabled by default.
-  enabled += filters.ExampleFilter
+  # enabled += filters.ExampleFilter
 
   # Disable CSRFFilter for testing
   disabled += play.filters.csrf.CSRFFilter
@@ -235,7 +235,7 @@ play.filters {
 
   # Enabled filters are run automatically against Play.
   # CSRFFilter, AllowedHostFilters, and SecurityHeadersFilters are enabled by default.
-  enabled += filters.ExampleFilter
+  # enabled += filters.ExampleFilter
 
   # Disabled filters remove elements from the enabled list.
   #disabled += filters.ExampleFilter
