Add (temporary) iteractive svg map

--- a/ui/package.json
+++ b/ui/package.json
@@ -12,7 +12,8 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.5"
+    "react-scripts": "^2.1.5",
+    "react-svgmt": "^1.1.7"
   },
   "devDependencies": {
     "ncp": "^2.0.0",
